Mise en place du header et de la barre de navigation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./style/style.css" rel="stylesheet" />
     <title>Elisabeth Malek</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/e72058d014.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header class="et-hero-tabs" id="home">
+        <h1>ELISABETH MALEK</h1>
+        <h2>Développeuse Web Front End</h3>
+            <button class="btn btn-1 hover-filled-slide-down more">
+                <span>En savoir plus</span>
+            </button>
+            <div class="et-hero-tabs-container">
+                <a class="et-hero-tab" href="#home">Home</a>
+                <a class="et-hero-tab" href="#tab-about">About</a>
+                <a class="et-hero-tab" href="#tab-skills">Skills</a>
+                <a class="et-hero-tab" href="#tab-portfolio">Portfolio</a>
+                <a class="et-hero-tab" href="#tab-contact">Contact</a>
+                <span class="et-hero-tab-slider"></span>
+            </div>
+    </header>
+
+    <main>
+        <section class="et-slide" id="tab-about"></section>
+        <section class="et-slide" id="tab-skills"></section>
+        <section class="et-slide" id="tab-portfolio"></section>
+        <section class="et-slide" id="tab-contact"></section>
+
+    </main>
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
