Ajout des boutons dans les différentes section et commentaire partie html

--- a/index.html
+++ b/index.html
@@ -29,10 +29,44 @@
     </header>
 
     <main>
-        <section class="et-slide" id="tab-about"></section>
-        <section class="et-slide" id="tab-skills"></section>
-        <section class="et-slide" id="tab-portfolio"></section>
-        <section class="et-slide" id="tab-contact"></section>
+        <!-- Partie à propos -->
+        <section class="et-slide" id="tab-about">
+            <h3>About</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nostrum beatae saepe a mollitia eveniet!
+                Magnam deleniti praesentium nihil delectus soluta, culpa in omnis magni excepturi, nemo vel doloribus
+                officia.</p>
+            <button class="btn btn-1 hover-filled-slide-down">
+                <a href="./doc/Elisabeth_Malek_Resume.pdf" download="Elisabeth Malek Resume">
+                    <span>Téléchargez mon CV</span></a>
+            </button>
+        </section>
+        <!-- Fin partie à propos -->
+
+        <!-- Partie compétences -->
+        <section class="et-slide" id="tab-skills">
+            <h3>My Skills</h3>
+        </section>
+         <!-- Fin partie compétences -->
+
+         <!-- Partie portfolio -->
+        <section class="et-slide" id="tab-portfolio">
+            <h3>Portfolio</h3>
+            <button class="btn btn-1 hover-filled-slide-down">
+                <a href="https://github.com/elisamlk?tab=repositories">
+                    <span>Voir plus</span>
+                </a>
+            </button>
+        </section>
+       <!-- Fin partie portfolio -->
+
+        <!-- Partie contact -->
+        <section class="et-slide" id="tab-contact">
+            <h3>Contact</h3>
+            <button class="btn btn-1 hover-filled-slide-down">
+                <span>Contactez moi</span>
+            </button>
+        </section>
+        <!-- Fin partie contact -->
 
     </main>
 
