--- a/index.html
+++ b/index.html
@@ -46,22 +46,78 @@
         <section class="et-slide" id="tab-skills">
             <h3>My Skills</h3>
         </section>
-         <!-- Fin partie compétences -->
+        <!-- Fin partie compétences -->
 
-         <!-- Partie portfolio -->
+        <!-- Partie portfolio -->
         <section class="et-slide" id="tab-portfolio">
             <h3>Portfolio</h3>
+            <div class="demo-gallery">
+                <ul id="lightgallery">
+                    <li data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/1-375.jpg 375, https://sachinchoolur.github.io/lightgallery.js/static/img/1-480.jpg 480, https://sachinchoolur.github.io/lightgallery.js/static/img/1.jpg 800"
+                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
+                        data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
+                        <a href="">
+                            <img class="img-responsive"
+                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-1.jpg">
+                            <div class="demo-gallery-poster">
+                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                            </div>
+                        </a>
+                    </li>
+                    <li data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/2-375.jpg 375, https://sachinchoolur.github.io/lightgallery.js/static/img/2-480.jpg 480, https://sachinchoolur.github.io/lightgallery.js/static/img/2.jpg 800"
+                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
+                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
+                        <a href="">
+                            <img class="img-responsive"
+                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-2.jpg">
+                            <div class="demo-gallery-poster">
+                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                            </div>
+                        </a>
+                    </li>
+                  
+                    <li data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/4-375.jpg 375, https://sachinchoolur.github.io/lightgallery.js/static/img/4-480.jpg 480, https://sachinchoolur.github.io/lightgallery.js/static/img/4.jpg 800"
+                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/4-1600.jpg"
+                        data-sub-html="<h4>Coniston Calmness</h4><p>Beautiful morning</p>">
+                        <a href="">
+                            <img class="img-responsive"
+                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-4.jpg">
+                            <div class="demo-gallery-poster">
+                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+             
+            </div>
+            </div>
             <button class="btn btn-1 hover-filled-slide-down">
                 <a href="https://github.com/elisamlk?tab=repositories">
                     <span>Voir plus</span>
                 </a>
             </button>
         </section>
-       <!-- Fin partie portfolio -->
+        <!-- Fin partie portfolio -->
 
         <!-- Partie contact -->
         <section class="et-slide" id="tab-contact">
             <h3>Contact</h3>
+            <div class="contact-display">
+                <div class="contact-section">
+                    <i class="fa-regular fa-envelope"></i>
+                    <p>elisabeth.malek@yahoo.fr</p>
+                </div>
+                <div class="telephone">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>
+                        <a href="tel:0649526841">06.49.52.68.41</a>
+                    </p>
+                </div>
+                <div class="location">
+                    <i class="fa-solid fa-location-pin"></i>
+                    <p>92110, Clichy</p>
+                </div>
+            </div>
             <button class="btn btn-1 hover-filled-slide-down">
                 <span>Contactez moi</span>
             </button>
