--- a/index.html
+++ b/index.html
@@ -93,9 +93,19 @@
         <!-- Partie contact -->
         <section class="et-slide" id="tab-contact">
             <h3>Contact</h3>
-            <div class="wrapper">
+            <form action="mail.php" method="post">
+                <label for="name">Your Name</label>
+                <input type="text"  name="name" placeholder="Your name..">
+                <label for="lname">Email</label>
+                <input type="email"  name="email" placeholder="Your email..">
+               
+                <label for="message">Message</label>
+                <textarea  name="message" placeholder="Write something.." style="height:200px"></textarea>
+                <input type="submit" value="Submit">
+              </form>
+            <!-- <div class="wrapper">
 
-                <form action="#">
+                <form action="message.php">
                     <div class="dbl-field">
                         <div class="field">
                             <input type="text" name="name" placeholder="Enter your name">
@@ -127,7 +137,7 @@
                     <span></span>
                   </div> -->
                 </form>
-            </div>
+            </div> -->
 
         </section>
         <!-- Fin partie contact -->
