Mofif du formulaire de contact partie html

--- a/index.html
+++ b/index.html
@@ -93,18 +93,8 @@
         <!-- Partie contact -->
         <section class="et-slide" id="tab-contact">
             <h3>Contact</h3>
-            <form action="mail.php" method="post">
-                <label for="name">Your Name</label>
-                <input type="text"  name="name" placeholder="Your name..">
-                <label for="lname">Email</label>
-                <input type="email"  name="email" placeholder="Your email..">
-               
-                <label for="message">Message</label>
-                <textarea  name="message" placeholder="Write something.." style="height:200px"></textarea>
-                <input type="submit" value="Submit">
-              </form>
-            <!-- <div class="wrapper">
 
+            <div class="wrapper">
                 <form action="message.php">
                     <div class="dbl-field">
                         <div class="field">
@@ -132,12 +122,8 @@
                     <button type="submit" class="btn btn-1 hover-filled-slide-down">
                         <span>Contactez moi</span>
                     </button>
-                    <!-- <div class="button-area">
-                    <button type="submit">Send Message</button>
-                    <span></span>
-                  </div> -->
                 </form>
-            </div> -->
+            </div>
 
         </section>
         <!-- Fin partie contact -->
