--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h3>Contact</h3>
 
             <div class="wrapper">
-                <form action="message.php">
+                <form action="https://formspree.io/f/mnqrzdon" method="POST">
                     <div class="dbl-field">
                         <div class="field">
                             <input type="text" name="name" placeholder="Enter your name">
