Mise en place des skills partie desktop

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="et-hero-tabs-container">
                 <a class="et-hero-tab" href="#home">Home</a>
                 <a class="et-hero-tab" href="#tab-about">About</a>
-                <a class="et-hero-tab" href="#tab-skills">Skills</a>
+                <!-- <a class="et-hero-tab" href="#tab-skills">Skills</a> -->
                 <a class="et-hero-tab" href="#tab-portfolio">Portfolio</a>
                 <a class="et-hero-tab" href="#tab-contact">Contact</a>
                 <span class="et-hero-tab-slider"></span>
@@ -35,6 +35,35 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nostrum beatae saepe a mollitia eveniet!
                 Magnam deleniti praesentium nihil delectus soluta, culpa in omnis magni excepturi, nemo vel doloribus
                 officia.</p>
+            <div class="skills">
+                <ul>
+                    <li data-percent="90">
+                        <svg viewbox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45"></circle>
+                            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+                        </svg><span>HTML5</span><small></small>
+                    </li>
+                    <li data-percent="75">
+                        <svg viewbox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45"></circle>
+                            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+                        </svg><span>CSS/SCSS</span><small></small>
+                    </li>
+                    <li data-percent="85">
+                        <svg viewbox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45"></circle>
+                            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+                        </svg><span>Javacript/jQuery</span><small></small>
+                    </li>
+                    <li data-percent="65">
+                        <svg viewbox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45"></circle>
+                            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+                        </svg><span>GIT</span><small></small>
+                    </li>
+                </ul>
+
+            </div>
             <button class="btn btn-1 hover-filled-slide-down">
                 <a href="./doc/Elisabeth_Malek_Resume.pdf" download="Elisabeth Malek Resume">
                     <span>Téléchargez mon CV</span></a>
@@ -43,9 +72,9 @@
         <!-- Fin partie à propos -->
 
         <!-- Partie compétences -->
-        <section class="et-slide" id="tab-skills">
+        <!-- <section class="et-slide" id="tab-skills">
             <h3>My Skills</h3>
-        </section>
+        </section> -->
         <!-- Fin partie compétences -->
 
         <!-- Partie portfolio -->
@@ -127,6 +156,9 @@
 
         </section>
         <!-- Fin partie contact -->
+        <footer>
+
+        </footer>
 
     </main>
 
