Ajout du scroll on top javascript

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         </section>
         <!-- Fin partie contact -->
         <footer>
+            <button class="top">scroll on top</button>
 
         </footer>
 
