Mise en page de la page footer

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         </section>
         <!-- Fin partie contact -->
         <footer>
-            <button class="top">scroll on top</button>
+            <i class="top fa-sharp fa-solid fa-circle-arrow-up"></i>
+
 
         </footer>
 
