Suppression du scroll on top

--- a/index.html
+++ b/index.html
@@ -14,27 +14,30 @@
 <body>
     <header class="et-hero-tabs" id="home">
         <h1>ELISABETH MALEK</h1>
-        <h2>Développeuse Web Front End</h3>
-            <button class="btn btn-1 hover-filled-slide-down more">
-                <span>En savoir plus</span>
-            </button>
-            <div class="et-hero-tabs-container">
-                <a class="et-hero-tab" href="#home">Home</a>
-                <a class="et-hero-tab" href="#tab-about">About</a>
-                <!-- <a class="et-hero-tab" href="#tab-skills">Skills</a> -->
-                <a class="et-hero-tab" href="#tab-portfolio">Portfolio</a>
-                <a class="et-hero-tab" href="#tab-contact">Contact</a>
-                <span class="et-hero-tab-slider"></span>
-            </div>
+        <h2>Développeuse Web Front End</h2>
+        <button class="btn btn-1 hover-filled-slide-down more">
+            <span>En savoir plus</span>
+        </button>
+        <div class="et-hero-tabs-container">
+            <a class="et-hero-tab" href="#home">Home</a>
+            <a class="et-hero-tab" href="#tab-about">About</a>
+            <!-- <a class="et-hero-tab" href="#tab-skills">Skills</a> -->
+            <a class="et-hero-tab" href="#tab-portfolio">Portfolio</a>
+            <a class="et-hero-tab" href="#tab-contact">Contact</a>
+            <span class="et-hero-tab-slider"></span>
+        </div>
     </header>
 
     <main>
         <!-- Partie à propos -->
         <section class="et-slide" id="tab-about">
             <h3>About</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nostrum beatae saepe a mollitia eveniet!
-                Magnam deleniti praesentium nihil delectus soluta, culpa in omnis magni excepturi, nemo vel doloribus
-                officia.</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+                nostrum beatae saepe a mollitia eveniet! Magnam deleniti praesentium
+                nihil delectus soluta, culpa in omnis magni excepturi, nemo vel
+                doloribus officia.
+            </p>
             <div class="skills">
                 <ul>
                     <li data-percent="90">
@@ -62,7 +65,6 @@
                         </svg><span>GIT</span><small></small>
                     </li>
                 </ul>
-
             </div>
             <button class="btn btn-1 hover-filled-slide-down">
                 <a href="./doc/Elisabeth_Malek_Resume.pdf" download="Elisabeth Malek Resume">
@@ -84,31 +86,30 @@
                 <ul id="lightgallery">
                     <li>
                         <a href="">
-                            <img class="img-responsive" src="./img/projects/fresh-organic.png">
+                            <img class="img-responsive" src="./img/projects/fresh-organic.png" />
                             <div class="demo-gallery-poster">
-                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png" />
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img class="img-responsive" src="./img/projects/fisheye.png">
+                            <img class="img-responsive" src="./img/projects/fisheye.png" />
                             <div class="demo-gallery-poster">
-                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png" />
                             </div>
                         </a>
                     </li>
 
                     <li>
                         <a href="">
-                            <img class="img-responsive" src="./img/projects/game-on.png">
+                            <img class="img-responsive" src="./img/projects/game-on.png" />
                             <div class="demo-gallery-poster">
-                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                                <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png" />
                             </div>
                         </a>
                     </li>
                 </ul>
-
             </div>
 
             <button class="btn btn-1 hover-filled-slide-down">
@@ -127,22 +128,22 @@
                 <form action="https://formspree.io/f/mnqrzdon" method="POST">
                     <div class="dbl-field">
                         <div class="field">
-                            <input type="text" name="name" placeholder="Enter your name">
-                            <i class='fas fa-user'></i>
+                            <input type="text" name="name" placeholder="Enter your name" />
+                            <i class="fas fa-user"></i>
                         </div>
                         <div class="field">
-                            <input type="text" name="email" placeholder="Enter your email">
-                            <i class='fas fa-envelope'></i>
+                            <input type="text" name="email" placeholder="Enter your email" />
+                            <i class="fas fa-envelope"></i>
                         </div>
                     </div>
                     <div class="dbl-field">
                         <div class="field">
-                            <input type="text" name="phone" placeholder="Enter your phone">
-                            <i class='fas fa-phone-alt'></i>
+                            <input type="text" name="phone" placeholder="Enter your phone" />
+                            <i class="fas fa-phone-alt"></i>
                         </div>
                         <div class="field">
-                            <input type="text" name="website" placeholder="Enter your website">
-                            <i class='fas fa-globe'></i>
+                            <input type="text" name="website" placeholder="Enter your website" />
+                            <i class="fas fa-globe"></i>
                         </div>
                     </div>
                     <div class="message">
@@ -153,15 +154,12 @@
                     </button>
                 </form>
             </div>
-
         </section>
         <!-- Fin partie contact -->
-        <footer>
-            <i class="top fa-sharp fa-solid fa-circle-arrow-up"></i>
 
-
-        </footer>
-
+        <!-- Partie footer -->
+        <footer></footer>
+        <!-- Fin partie footer -->
     </main>
 
     <script src="js/script.js"></script>
