Mise en page section contact

--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
         <!-- Fin partie contact -->
 
         <!-- Partie footer -->
-        <footer></footer>
+        <footer>
+         
+
+        </footer>
         <!-- Fin partie footer -->
     </main>
 
