Ajout de la partie footer

--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
 
         <!-- Partie footer -->
         <footer>
-         
-
+         <h1>Elisabeth Malek</h1>
+         <h1>Elisabeth Malek</h1>
+         <h1>Elisabeth Malek</h1>
+         <h1>Elisabeth Malek</h1>
         </footer>
         <!-- Fin partie footer -->
     </main>
