Ajout du texte dans la partie about

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <section class="et-slide" id="tab-about">
             <h3>About</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
-                nostrum beatae saepe a mollitia eveniet! Magnam deleniti praesentium
-                nihil delectus soluta, culpa in omnis magni excepturi, nemo vel
-                doloribus officia.
+                Après un parcours dans les métiers de la gestion d’entreprise, ponctué d’un intérêt grandissant pour le monde du numérique, j’ai pris la décision d’amorcer un projet de reconversion vers le métier de développeuse web et de suivre une formation à distance dispensée par Openclassrooms. Grâce à ces nouvelles compétences acquises, je serais ravie de collaborer avec vous sur vos nouveaux projets.
             </p>
             <div class="skills">
                 <ul>
