Ajustement de la partie portfolio

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
         <section class="et-slide" id="tab-about">
             <h3>About</h3>
             <p>
-                Après un parcours dans les métiers de la gestion d’entreprise, ponctué d’un intérêt grandissant pour le monde du numérique, j’ai pris la décision d’amorcer un projet de reconversion vers le métier de développeuse web et de suivre une formation à distance dispensée par Openclassrooms. Grâce à ces nouvelles compétences acquises, je serais ravie de collaborer avec vous sur vos nouveaux projets.
+                Après un parcours dans les métiers de la gestion d’entreprise, ponctué
+                d’un intérêt grandissant pour le monde du numérique, j’ai pris la
+                décision d’amorcer un projet de reconversion vers le métier de
+                développeuse web et de suivre une formation à distance dispensée par
+                Openclassrooms. Grâce à ces nouvelles compétences acquises, je serais
+                ravie de collaborer avec vous sur vos nouveaux projets.
             </p>
             <div class="skills">
-                <ul>
+                <ul class="skills-display">
                     <li data-percent="90">
                         <svg viewbox="0 0 100 100">
                             <circle cx="50" cy="50" r="45"></circle>
@@ -79,7 +84,7 @@
         <!-- Partie portfolio -->
         <section class="et-slide" id="tab-portfolio">
             <h3>Portfolio</h3>
-            <div class="demo-gallery">
+            <!-- <div class="demo-gallery">
                 <ul id="lightgallery">
                     <li>
                         <a href="">
@@ -107,7 +112,24 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
+            <ul class="portfolio-display">
+                <li>
+                    <a href="">
+                        <img src="./img/projects/fresh-organic.png" />
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/projects/fisheye.png" />
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/projects/game-on.png" />
+                    </a>
+                </li>
+            </ul>
 
             <button class="btn btn-1 hover-filled-slide-down">
                 <a href="https://github.com/elisamlk?tab=repositories">
@@ -156,10 +178,10 @@
 
         <!-- Partie footer -->
         <footer>
-         <h1>Elisabeth Malek</h1>
-         <h1>Elisabeth Malek</h1>
-         <h1>Elisabeth Malek</h1>
-         <h1>Elisabeth Malek</h1>
+            <h1>Elisabeth Malek</h1>
+            <h1>Elisabeth Malek</h1>
+            <h1>Elisabeth Malek</h1>
+            <h1>Elisabeth Malek</h1>
         </footer>
         <!-- Fin partie footer -->
     </main>
