Mise en place du hover sur les images partie portfolio

--- a/index.html
+++ b/index.html
@@ -115,19 +115,28 @@
             </div> -->
             <ul class="portfolio-display">
                 <li>
-                    <a href="">
-                        <img src="./img/projects/fresh-organic.png" />
-                    </a>
+                    <div class="container">
+                        <img src="img/projects/game-on.png" alt="" />
+                        <p class="title">card title</p>
+                        <div class="overlay"></div>
+                        <div class="button"><a href="#"> BUTTON </a></div>
+                      </div>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./img/projects/fisheye.png" />
-                    </a>
+                    <div class="container">
+                        <img src="img/projects/fisheye.png" alt="" />
+                        <p class="title">card title</p>
+                        <div class="overlay"></div>
+                        <div class="button"><a href="#"> BUTTON </a></div>
+                      </div>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./img/projects/game-on.png" />
-                    </a>
+                    <div class="container">
+                        <img src="img/projects/fresh-organic.png" alt="" />
+                        <p class="title">card title</p>
+                        <div class="overlay"></div>
+                        <div class="button"><a href="#"> BUTTON </a></div>
+                      </div>
                 </li>
             </ul>
 
