Ajustement de la partie portfolio

--- a/index.html
+++ b/index.html
@@ -117,25 +117,25 @@
                 <li>
                     <div class="container">
                         <img src="img/projects/game-on.png" alt="" />
-                        <p class="title">card title</p>
+                        <p class="title">game on</p>
                         <div class="overlay"></div>
-                        <div class="button"><a href="#"> BUTTON </a></div>
+                        <div class="button"><a href="#">VOIR LE PROJET</a></div>
                       </div>
                 </li>
                 <li>
                     <div class="container">
                         <img src="img/projects/fisheye.png" alt="" />
-                        <p class="title">card title</p>
+                        <p class="title">fisheye</p>
                         <div class="overlay"></div>
-                        <div class="button"><a href="#"> BUTTON </a></div>
+                        <div class="button"><a href="#">VOIR LE PROJET</a></div>
                       </div>
                 </li>
                 <li>
                     <div class="container">
                         <img src="img/projects/fresh-organic.png" alt="" />
-                        <p class="title">card title</p>
+                        <p class="title">fresh organic</p>
                         <div class="overlay"></div>
-                        <div class="button"><a href="#"> BUTTON </a></div>
+                        <div class="button"><a href="#">VOIR LE PROJET</a></div>
                       </div>
                 </li>
             </ul>
