Ajout des informations dans le bas de page

--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
         </section>
         <!-- Fin partie à propos -->
 
-
-
         <!-- Partie portfolio -->
         <section class="et-slide" id="tab-portfolio">
             <h3>Portfolio</h3>
@@ -156,9 +154,19 @@
         <!-- Partie footer -->
         <footer>
             <h1>Elisabeth Malek</h1>
-            <h1>Elisabeth Malek</h1>
-            <h1>Elisabeth Malek</h1>
-            <h1>Elisabeth Malek</h1>
+            <div class="mail">
+                <i class="fa-solid fa-envelope"></i>
+                <a href="#">elisabeth.malek@yahoo.fr</a>
+            </div>
+            <div class="phone">
+                <i class="fa-solid fa-phone"></i>
+                <a href="#">06.49.52.68.41</a>
+            </div>
+            <div class="disclaim">
+                <p>Website design and development by</p>
+                <p>Elisabeth Malek</p>
+            </div>
+
         </footer>
         <!-- Fin partie footer -->
     </main>
