--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
                     </div>
                 </li>
             </ul>
-
             <button class="btn btn-1 hover-filled-slide-down">
                 <a href="https://github.com/elisamlk?tab=repositories">
                     <span>Voir plus</span>
@@ -117,7 +116,6 @@
         <!-- Partie contact -->
         <section class="et-slide" id="tab-contact">
             <h3>Contact</h3>
-
             <div class="wrapper">
                 <form action="https://formspree.io/f/mnqrzdon" method="POST">
                     <div class="dbl-field">
@@ -156,11 +154,11 @@
             <h1>Elisabeth Malek</h1>
             <div class="mail">
                 <i class="fa-solid fa-envelope"></i>
-                <a href="#">elisabeth.malek@yahoo.fr</a>
+                <a href="mailto:elisabeth.malek@yahoo.fr">elisabeth.malek@yahoo.fr</a>
             </div>
             <div class="phone">
                 <i class="fa-solid fa-phone"></i>
-                <a href="#">06.49.52.68.41</a>
+                <a href="tel:0649526841">06.49.52.68.41</a>
             </div>
             <div class="disclaim">
                 <p>Website design and development by</p>
