--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </ul>
             </div>
             <button class="btn btn-1 hover-filled-slide-down">
-                <a href="./doc/Elisabeth_Malek_Resume.pdf" download="Elisabeth Malek Resume">
+                <a href="./doc/ElisaMlk-CV.pdf" download="Elisabeth Malek Resume">
                     <span>Téléchargez mon CV</span></a>
             </button>
         </section>
@@ -85,7 +85,7 @@
                         <img src="img/projects/game-on.png" alt="" />
                         <p class="title">game on</p>
                         <div class="overlay"></div>
-                        <div class="button"><a href="#">VOIR LE PROJET</a></div>
+                        <div class="button"><a href="https://elisamlk.github.io/gameOn/">VOIR LE PROJET</a></div>
                     </div>
                 </li>
                 <li>
@@ -93,7 +93,7 @@
                         <img src="img/projects/fisheye.png" alt="" />
                         <p class="title">fisheye</p>
                         <div class="overlay"></div>
-                        <div class="button"><a href="#">VOIR LE PROJET</a></div>
+                        <div class="button"><a href="https://elisamlk.github.io/fishEye/">VOIR LE PROJET</a></div>
                     </div>
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                         <img src="img/projects/fresh-organic.png" alt="" />
                         <p class="title">fresh organic</p>
                         <div class="overlay"></div>
-                        <div class="button"><a href="#">VOIR LE PROJET</a></div>
+                        <div class="button"><a href="https://elisamlk.github.io/Fresh-Organic-Food/">VOIR LE PROJET</a></div>
                     </div>
                 </li>
             </ul>
