Modification du fichier html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Après un parcours dans les métiers de la gestion d’entreprise, ponctué
                 d’un intérêt grandissant pour le monde du numérique, j’ai pris la
                 décision d’amorcer un projet de reconversion vers le métier de
-                développeuse web et de suivre une formation à distance dispensée par
+                développeuse web et de suivre une formation en alternance dispensée par
                 Openclassrooms. Grâce à ces nouvelles compétences acquises, je serais
                 ravie de collaborer avec vous sur vos nouveaux projets.
             </p>
